--- a/events.html
+++ b/events.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="events.css">
 </head>
 <body>
-    
+    <button id="clickBtn">Click me</button>
+    <br> <br>
+    <form id="myForm" action="#test">
+        <input name="textField" type="text" placeholder="Input a text">
+        <input type="submit" value="Submit Form">
+    </form>
+
+    <div id="displayArea">Move mouse here...</div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="events.js"></script>
 </body>
 </html>
